--- a/source/stylesheets/_layout.scss
+++ b/source/stylesheets/_layout.scss
@@ -3,6 +3,10 @@
 // Layout
 // ------------------------------------------------------------
 
+*, *:before, *:after {
+  box-sizing: border-box;
+}
+
 section {
   padding: 3em 0;
 
